--- a/www/catalog-1.html
+++ b/www/catalog-1.html
@@ -241,276 +241,213 @@
 <div class="container content">
 	<div class="row">
 		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-1">
-			<div class="text">До бесплатной доставки осталось <span>500 р.</span></div>
+		<div class="col-xs-6 free-shiping free-shiping-2">
 			<div class="car">
+				<div>
+					<div class="range"></div>
+					<div class="ico" style="width:60%;"></div>
+				</div>
 				<a href="#">Хочу бесплатно</a>
 			</div>
+			<div class="text">До бесплатной доставки осталось <span>500 р.</span></div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="ol breadcrumb">
 				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
 				<li class="active">Хлебные крошки (уровень 1)</li>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12"><span class="catalog-title-1" style="padding-top: 0;">Заголовок первого уровня</span></div>
+		<div class="col-xs-12">
+			<div class="banner-catalog"></div>
+		</div>
 	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category1.jpg');">
-				<div class="category-label">Название 2 уровень</div>
-			</div>
+	<div class="row">
+		<div class="col-xs-3 bx-filter">
+			<form action="" method="GET" class="smartfilter">
+				
+			</form>
 		</div>
 		<div class="col-xs-9">
 			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+				<div class="col-xs-12 heading"><span>Название категории второго уровня</span></div>
 			</div>
-		</div>
-	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category2.jpg');">
-				<div class="category-label">Название 2 уровень</div>
+			<div class="row goods">
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-1.png');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item sale">
+						<div class="label label-right">ЛОВИ<br>МОМЕНТ</div>
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item sale">
+						<div class="label label-left thumb-up"></div>
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст длинный текст</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
+				<div class="col-xs-4">
+					<div class="item">
+						<div class="image" style="background-image: url('images/tovar-2.jpg');"><div class="zoom"></div></div>
+						<a href="product.html">
+							<div class="title">Инициатик - средства против первых морщин</div>
+							<div class="description">Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.</div>
+							<div class="price">
+								<div>3593.37 <span>руб</span></div>
+							</div>
+						</a>
+						<a href="javascript:void(0);" class="to-the-cart"></a>
+					</div>
+				</div>
 			</div>
-		</div>
-		<div class="col-xs-9">
-			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
+			<div class="row pagination-row">
+				<ul class="pagination">
+					<li class="active"><a href="#">1</a></li>
+					<li><a href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12"><span class="catalog-title-1">Заголовок первого уровня</span></div>
+		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
 	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category4.jpg');">
-				<div class="category-label">Название 2 уровень</div>
+	<div class="row goods recent-view">
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-9">
-			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-1.png');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category5.jpg');">
-				<div class="category-label">Название 2 уровень</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
-		<div class="col-xs-9">
-			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
+			</div>
+		</div>
+		<div class="col-xs-2">
+			<div class="item">
+				<div class="image" style="background-image: url('images/tovar-2.jpg');"></div>
+				<a href="product.html">
+					<div class="title">Инициатик - средства против первых морщин</div>
+					<div class="price">
+						<div>3593.37 <span>руб</span></div>
+					</div>
+				</a>
+				<a href="javascript:void(0);" class="to-the-cart"></a>
 			</div>
 		</div>
 	</div>
