--- a/www/catalog-text.html
+++ b/www/catalog-text.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/waves.min.css" />
+	<link rel="stylesheet" type="text/css" href="adds/jquery-ui/jquery-ui.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/media.css" />
 	<!--[if lt IE 9]>
@@ -571,6 +572,7 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/jquery.dotdotdot.min.js"></script>
 <script src="js/waves.min.js"></script>
+<script src="adds/jquery-ui/jquery-ui.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
