--- a/www/catalog-1.html
+++ b/www/catalog-1.html
@@ -605,6 +605,8 @@
 <script src="js/jquery.dotdotdot.min.js"></script>
 <script src="js/waves.min.js"></script>
 <script src="adds/jquery-ui/jquery-ui.min.js"></script>
+<script src="js/jquery.elevateZoom-3.0.8.min.js"></script>
+<script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
