--- a/www/product.html
+++ b/www/product.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
@@ -242,276 +242,108 @@
 <div class="container content">
 	<div class="row">
 		<div class="col-xs-6"></div>
-		<div class="col-xs-6 free-shiping free-shiping-1">
-			<div class="text">До бесплатной доставки осталось <span>500 р.</span></div>
+		<div class="col-xs-6 free-shiping free-shiping-2">
 			<div class="car">
+				<div>
+					<div class="range"></div>
+					<div class="ico" style="width:60%;"></div>
+				</div>
 				<a href="#">Хочу бесплатно</a>
 			</div>
+			<div class="text">До бесплатной доставки осталось <span>500 р.</span></div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
-			<div class="ol breadcrumb">
+			<div class="ol breadcrumb" style="margin-bottom: 12px;">
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
+				<li><a href="#">Хлебные крошки</a></li>
 				<li><a href="#">Хлебные крошки</a></li>
 				<li class="active">Хлебные крошки (уровень 1)</li>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12"><span class="catalog-title-1" style="padding-top: 0;">Заголовок первого уровня</span></div>
-	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category1.jpg');">
-				<div class="category-label">Название 2 уровень</div>
+		<div class="col-xs-12">
+			<h1>blanco germany (silver delux style) - кран железный delux style артикул if456 AM на разъём 10 дюймов</h1>
+		</div>
+		<div class="col-xs-12 art">Артикул: 4680001872484</div>
+		<div class="col-xs-5">
+			<div class="product-images">
+				<div class="main-image">
+					<!-- Большое изображение будет загружаться сюда с помощью JS. Заполнятйе только mini-images. Выбирайте изображения побольше -->
+					<img src="" alt="" data-zoom-image="" />
+				</div>
+				<div class="mini-images">
+					<div class="mini-image"><img src="images/product-image-big.jpg" alt="Товар - изображение 1"></div>
+					<div class="mini-image"><img src="images/product-image.jpg" alt="Товар - изображение 2"></div>
+					<div class="mini-image"><img src="images/category4.jpg" alt="Товар - изображение 3"></div>
+					<div class="mini-image"><img src="images/category5.jpg" alt="Товар - изображение 4"></div>
+					<div class="mini-image"><img src="images/product-image.jpg" alt="Товар - изображение 5"></div>
+				</div>
 			</div>
 		</div>
-		<div class="col-xs-9">
-			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+		<div class="col-xs-7">
+			<div class="product-description">
+				<p>Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает. Разглаживает, увлажняет. защищает.</p>
 			</div>
-		</div>
-	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category2.jpg');">
-				<div class="category-label">Название 2 уровень</div>
+			<div class="count">
+				<label for="product-count-input">кол-во</label>
+				<input id="product-count-input" type="number" min="1" max="999" step="1" value="1" />
 			</div>
-		</div>
-		<div class="col-xs-9">
-			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+			<div class="price">
+				<div>
+					<!--<div>3593.37 <span>руб</span></div> Normal price -->
+					<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
+					<div class="old-price">3593.37 <span>руб</span></div><!-- Old price -->
+				</div>
+			</div>
+			<div class="buy-button">
+				<a href="#">Купить</a>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12"><span class="catalog-title-1">Заголовок первого уровня</span></div>
-	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category4.jpg');">
-				<div class="category-label">Название 2 уровень</div>
-			</div>
-		</div>
-		<div class="col-xs-9">
+		<div class="col-xs-12 reviews">
 			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+				<div class="col-xs-12 heading">
+					<span>Отзывы о товаре <span>(5)</span></span>
+					<a href="#add-review" data-toggle="modal">Добавить отзыв</a>
+				</div>
 			</div>
-		</div>
-	</div>
-	<div class="row catalog-text-category">
-		<div class="col-xs-3">
-			<div class="category-ico" style="background-image:url('images/category5.jpg');">
-				<div class="category-label">Название 2 уровень</div>
-			</div>
-		</div>
-		<div class="col-xs-9">
-			<div class="row">
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
-				<ul class="col-xs-3">
-					<a href="#">Третий уровень каталога</a>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-					<li><a href="#">Категория 4 уровня</a></li>
-				</ul>
+			<div class="modal fade" id="add-review">
+				<div class="modal-dialog">
+					<form action="" method="POST" class="modal-content animated-placeholder">
+						<div class="modal-header">Ваш отзыв</div>
+						<div class="modal-body">
+							<div class="input">
+								<input class="animated-placeholder" type="text" id="add-review-name" name="add-review-name" required placeholder="Имя" />
+								<label for="add-review-name"></label>
+							</div>
+							<div class="input">
+								<input class="animated-placeholder" type="tel" id="add-review-phone" name="add-review-phone" required placeholder="Номер телефона" />
+								<label for="add-review-phone"></label>
+							</div>
+							<div class="input">
+								<input class="animated-placeholder" type="email" id="add-review-email" name="add-review-email" placeholder="E-mail">
+								<label for="add-review-email"></label>
+							</div>
+							<div class="input">
+								<textarea class="animated-placeholder" name="add-review-text" id="add-review-text" required placeholder="Отзыв"></textarea>
+								<label for="add-review-text"></label>
+							</div>
+						</div>
+						<div class="modal-footer">
+							<div class="submit-result">Спасибо! Ваше сообщение было отправлено.</div>
+							<input type="submit" value="Отправить" />
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
 	</div>
