--- a/www/blog.html
+++ b/www/blog.html
@@ -239,7 +239,7 @@
 	</nav>
 </header>
 <!-- /header -->
-<div class="container content product">
+<div class="container content blog">
 	<div class="row">
 		<div class="col-xs-6"></div>
 		<div class="col-xs-6 free-shiping free-shiping-2">
@@ -255,158 +255,93 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
-			<div class="ol breadcrumb" style="margin-bottom: 12px;">
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li><a href="#">Хлебные крошки</a></li>
-				<li class="active">Хлебные крошки (уровень 1)</li>
+			<div class="ol breadcrumb">
+				<li><a href="#">Главная</a></li>
+				<li class="active">Блог</li>
 			</div>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12">
-			<h1>blanco germany (silver delux style) - кран железный delux style артикул if456 AM на разъём 10 дюймов</h1>
-		</div>
-		<div class="col-xs-12 art">Артикул: 4680001872484</div>
-		<div class="col-xs-5">
-			<div class="product-images">
-				<div class="main-image">
-					<!-- Большое изображение будет загружаться сюда с помощью JS. Заполнятйе только mini-images. Выбирайте изображения побольше -->
-					<img src="" alt="" data-zoom-image="" />
-				</div>
-				<div class="mini-images">
-					<div class="mini-image"><img src="images/product-image-big.jpg" alt="Товар - изображение 1"></div>
-					<div class="mini-image"><img src="images/product-image.jpg" alt="Товар - изображение 2"></div>
-					<div class="mini-image"><img src="images/category4.jpg" alt="Товар - изображение 3"></div>
-					<div class="mini-image"><img src="images/category5.jpg" alt="Товар - изображение 4"></div>
-					<div class="mini-image"><img src="images/product-image.jpg" alt="Товар - изображение 5"></div>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-7">
-			<div class="product-description">
-				<p>Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживает, увлажняет. защищает. Разглаживает, увлажняет. защищает.</p>
-			</div>
-			<div class="count">
-				<label for="product-count-input">кол-во</label>
-				<input id="product-count-input" type="number" min="1" max="999" step="1" value="1" />
-			</div>
-			<div class="price">
-				<div>
-					<!--<div>3593.37 <span>руб</span></div> Normal price -->
-					<div class="special-price">3593.37 <span>руб</span></div><!-- Special price -->
-					<div class="old-price">3593.37 <span>руб</span></div><!-- Old price -->
-				</div>
-			</div>
-			<div class="buy-button">
-				<a href="#">Купить</a>
-			</div>
+		<div class="col-xs-12 blog-intro">
+			<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации. Значимость этих проблем настолько очевидна, что консультация с широким активом требуют от нас анализа существенных финансовых и административных условий. Не следует, однако забывать, что укрепление и развитие структуры позволяет оценить значение существенных финансовых.</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-xs-12 reviews">
+		<form id="blog-sorting" action="" method="POST" class="col-xs-12">
+			<h2>Сортируй</h2>
 			<div class="row">
-				<div class="col-xs-12 heading">
-					<span>Отзывы о товаре <span>(5)</span></span>
-					<a href="#add-review" data-toggle="modal">Добавить отзыв</a>
+				<div class="col-xs-5">
+					<label for="blog-sorting-keyword">Ключевое слово</label>
+					<input type="text" id="blog-sorting-keyword" />
+				</div>
+				<div class="col-xs-5">
+					<label for="blog-sorting-title">Название статьи</label>
+					<input type="text"id="blog-sorting-title" />
+				</div>
+				<div class="col-xs-2">
+					<input type="submit" value="Применить">
 				</div>
 			</div>
-			<div class="modal fade" id="add-review">
-				<div class="modal-dialog">
-					<form action="" method="POST" class="modal-content animated-placeholder">
-						<div class="modal-header">Ваш отзыв</div>
-						<div class="modal-body">
-							<div class="input">
-								<input class="animated-placeholder" type="text" id="add-review-name" name="add-review-name" required placeholder="Имя" />
-								<label for="add-review-name"></label>
-							</div>
-							<div class="input">
-								<input class="animated-placeholder" type="tel" id="add-review-phone" name="add-review-phone" required placeholder="Номер телефона" />
-								<label for="add-review-phone"></label>
-							</div>
-							<div class="input">
-								<input class="animated-placeholder" type="email" id="add-review-email" name="add-review-email" placeholder="E-mail">
-								<label for="add-review-email"></label>
-							</div>
-							<div class="input">
-								<textarea class="animated-placeholder" name="add-review-text" id="add-review-text" required placeholder="Отзыв"></textarea>
-								<label for="add-review-text"></label>
-							</div>
-						</div>
-						<div class="modal-footer">
-							<div class="submit-result">Спасибо! Ваше сообщение было отправлено.</div>
-							<input type="submit" value="Отправить" />
-						</div>
-					</form>
+		</form>
+	</div>
+	<div class="row">
+		<div class="col-xs-4">
+			<section>
+				<div class="meta">
+					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
 				</div>
-			</div>
-			<div class="row">
-				<ul class="col-xs-12">
-					<li>
-						<div class="review-header">
-							<div class="row">
-								<div class="col-xs-10"><p>Татьяна, Москва</p></div>
-								<div class="col-xs-2"><p>10.12.2015</p></div>
-							</div>
-						</div>
-						<div class="review-body">
-							<div class="row">
-								<div class="col-xs-10">
-									<p>Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл.</p>
-								</div>
-								<div class="col-xs-2">
-									<div class="stars" data-stars-count="1"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="review-header">
-							<div class="row">
-								<div class="col-xs-10"><p>Татьяна, Москва</p></div>
-								<div class="col-xs-2"><p>10.12.2015</p></div>
-							</div>
-						</div>
-						<div class="review-body">
-							<div class="row">
-								<div class="col-xs-10">
-									<p>Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл.</p>
-								</div>
-								<div class="col-xs-2">
-									<div class="stars" data-stars-count="2"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="review-header">
-							<div class="row">
-								<div class="col-xs-10"><p>Татьяна, Москва</p></div>
-								<div class="col-xs-2"><p>10.12.2015</p></div>
-							</div>
-						</div>
-						<div class="review-body">
-							<div class="row">
-								<div class="col-xs-10">
-									<p>Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает. Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл. Разглаживасет, увлажняет. защищает.Флюид против первых морщин Инициатик 40 мл.</p>
-								</div>
-								<div class="col-xs-2">
-									<div class="stars" data-stars-count="3"></div>
-								</div>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 pager"><span class="next"><a href="#">Показать еще</a></span></div>
-			</div>
+				<div class="image" style="background-image:url('images/product-image.jpg');">
+					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
+				</div>
+				<article>
+					<h3>С другой стороны сложившаяся структура организации</h3>
+					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
+					<div class="row">
+						<div class="col-xs-12 pager"><span class="next"><a href="#">Читать еще</a></span></div>
+					</div>
+				</article>
+			</section>
+			<section>
+				<div class="meta">
+					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
+				</div>
+				<div class="image" style="background-image:url('images/product-image.jpg');">
+					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
+				</div>
+				<article>
+					<h3>С другой стороны сложившаяся структура организации</h3>
+					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
+					<div class="row">
+						<div class="col-xs-12 pager"><span class="next"><a href="#">Читать еще</a></span></div>
+					</div>
+				</article>
+			</section>
 		</div>
+		<div class="col-xs-8">
+			<section class="big">
+				<div class="meta">
+					<span class="date">10.12.2015</span><span class="separator">|</span><span class="category"><a href="#">Название раздела</a></span>
+				</div>
+				<div class="image" style="background-image:url('images/product-image.jpg');">
+					<img src="images/product-image.jpg" alt="Изображение для статьи 1" />
+				</div>
+				<article>
+					<h3>С другой стороны сложившаяся структура организации</h3>
+					<p>С другой стороны сложившаяся структура организации представляет собой интересный эксперимент проверки соответствующий условий активизации.</p>
+					<div class="row">
+						<div class="col-xs-12 pager"><span class="next"><a href="#">Читать еще</a></span></div>
+					</div>
+				</article>
+			</section>
+		</div>
+	</div>
+	<div class="row pagination-row">
+		<ul class="pagination">
+			<li class="active"><a href="#">1</a></li>
+			<li><a href="#">2</a></li>
+			<li><a href="#">3</a></li>
+			<li><a href="#">4</a></li>
+		</ul>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 heading"><span>Товары, которые Вы недавно смотрели</span></div>
@@ -547,4 +482,4 @@
 <script src="js/jquery.maskedinput.min.js"></script>
 <script src="js/script.js"></script>
 </body>
-</html>
+</html>height: 200px;
